working On Boiler Plate With API in Next JS

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_API_URL=https://blog-api-testing.squadcodersdev.com/api
+MONGO_DB_URI=mongodb+srv://hafiz-azan:admin123@nextjs.vqylh.mongodb.net/Project-Next-js
