--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.13",
     "gsap": "^3.12.5",
     "mongodb": "6.9",
+    "mongoose": "^8.6.3",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
