--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "about": ["src/app/about/*"],
+      "about/*": ["src/app/about/*"],
+      "container/*": ["src/app/container/*"],
       "assets/*": ["src/assets/*"],
       "components/*": ["src/components/*"],
       "context-api/*": ["src/context-api/*"],
